--- a/style.css
+++ b/style.css
@@ -27,7 +27,8 @@ main {
     gap: 2.75rem;
 }
 
-.row1, .row2 {
+.row1,
+.row2 {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -37,8 +38,8 @@ main {
 
 .timerBox {
     background-color: var(--gray);
-    width: 25rem;
-    height: 12.5rem;
+    width: 300px;
+    height: 200px;
     border-radius: 1rem;
 
     display: flex;
@@ -54,10 +55,9 @@ main {
     color: white;
     font-weight: bolder;
 
-    font-size: 30px;
+    font-size: 25px;
 
     position: relative;
-    top: 55px;
     z-index: 1;
 }
 
@@ -65,10 +65,29 @@ main {
     font-family: "Roboto", sans-serif;
     color: white;
     font-weight: bolder;
+
     position: static;
     z-index: 0;
     margin-top: 30px;
 
-    font-size: 3rem;
+    font-size: 2.5rem;
 }
 
+@media (max-width: 1380px) {
+    .timerBox {
+        width: 250px;
+        height: 180px;
+    }
+}
+
+@media (max-width: 1180px) {
+    .row1,.row2 {
+        flex-direction: column;
+    }
+    .timerBox {
+        width: 50vw
+    }
+    body {
+        margin-block: 500px
+    }
+}
